--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.9.1</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
